<resources>
    <string name="app_name">PhotoGallery</string>
    <string name="action_settings">Settings</string>
    <string name="gallery_picture_description">This is description for picture shown in gallery page</string>

    <string name="left_button_name">Left</string>
    <string name="right_button_name">Right</string>
    <string name="snap_button_name">Snap</string>
    <string name="search_button_name">Search</string>
    <string name="edit_button_name">Edit</string>
    <string name="back_button_name">Back</string>

    <string name="timeframe_tag">Time Frame: </string>
    <string name="timeframe_from_tag">From: </string>
    <string name="timeframe_to_tag">To: </string>
    <string name="keyword_tag">Keyword: </string>
    <string name="location_tag">Location Selector: </string>
    <string name="top_left_tag">Top Left: </string>
    <string name="bottom_right_tag">Bottom Right: </string>

    <string name="timeframe_from_hint">Time from</string>
    <string name="timeframe_until_hint">Time until</string>
    <string name="keywords_hint">Keywords here</string>
    <string name="location_top_left_hint">Top Left Location</string>
    <string name="location_bottom_right_hint">Bottom Right Location</string>
</resources>
